--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <h1 class="mx-auto my-0 text-uppercase">Proyect A</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">Pagina wed dedicada a ganar un punto en introduccion a software con t 
         para no quedarme</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
+        <a href="#about" class="btn btn-primary js-scroll-trigger">
+          Started</a>
       </div>
     </div>
   </header>
@@ -66,9 +67,13 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+          <h2 class="text-white mb-4">Jeremy Hernández</h2>
+          <p class="text-white-50">Es es una breve introduccion a lo que soy:
+          -Artista
+          -Inspirador
+          -Poeta
+          -Escritos
+          -Guapisimo</p>
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
