--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           -Guapisimo</p>
         </div>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
+      <img src="img/ipad2.png" class="img-fluid" alt="">
     </div>
   </section>
 
