--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <h4>Aficiones</h4>
+            <p class="text-black-50 mb-0">Mi aficion principal como programador es ir navegando por los codigo e ir cambiando cualquier cosas,
+            tambien ha sido un gran aporte los videojuego y espero porder hacer o terminar algunos que tengo en mente.</p>
           </div>
         </div>
       </div>
