--- a/index.html
+++ b/index.html
@@ -101,14 +101,15 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+          <img class="img-fluid" src="img/demo-image-1.jpg" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Misty</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <h4 class="text-white">Miss Fortune</h4>
+                <p class="mb-0 text-white-50">Este fue el primer personaje que jugue en "lol" en mi regreso... 
+                en perspectiva es importante porque marca un epoca exelente.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
