--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Mountains</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <h4 class="text-white">Laura "Lau"</h4>
+                <p class="mb-0 text-white-50">Bueno ella es Lau empecemos que somos amigos desde el último año del colegio, siempre nos peleábamos porque ella tienes sus diferencias y yo las mías xdd.
+                  A ambos nos gusta escribir y la poesía es inevitable, tenemos un café pendiente y muchos temas de qué hablar, y como no agregarla a mi page.
+                </p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
