--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
           -Artista
           -Inspirador
           -Poeta
-          -Escritos
-          -Guapisimo</p>
+          -Escritor
+          -Guapisimo
+          </p>
         </div>
       </div>
       <img src="img/ipad2.png" class="img-fluid" alt="">
@@ -92,8 +93,8 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4>Aficiones</h4>
-            <p class="text-black-50 mb-0">Mi aficion principal como programador es ir navegando por los codigo e ir cambiando cualquier cosas,
-            tambien ha sido un gran aporte los videojuego y espero porder hacer o terminar algunos que tengo en mente.</p>
+            <p class="text-black-50 mb-0">Mi aficion principal como programador es ir navegando por los codigo e ir cambiando cualquier cosa;
+            tambien ha sido un gran aporte los videojuego y espero porder hacer o terminar algunos que tenga en mente.</p>
           </div>
         </div>
       </div>
@@ -108,8 +109,8 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Miss Fortune</h4>
-                <p class="mb-0 text-white-50">Este fue el primer personaje que jugue en "lol" en mi regreso... 
-                en perspectiva es importante porque marca un epoca exelente.</p>
+                <p class="mb-0 text-white-50">Este fue el primer personaje que jugue en "lol",en mi regreso... 
+                en perspectiva es importante porque marca una epoca excelente.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
