--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">Jeremy Hernández</h2>
-          <p class="text-white-50">Es es una breve introduccion a lo que soy:
+          <p class="text-white-50">Es... es una breve introduccion a lo que soy:
           -Artista
           -Inspirador
           -Poeta
