--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
   <!-- Custom scripts for this template -->
   <script src="js/grayscale.min.js"></script>
   
-<bgsound="son/Tessa Violet - Crush (Lyrics) (GOEAR.EU).mp3">
+<embed src="son/Tessa Violet - Crush (Lyrics) (GOEAR.EU).mp3" autostart=false true loop=true width="263" height="186">
   
 </body>
 
