--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
 
     </div>
   </section>
+  
+  <embed src="son/Tessa Violet - Crush (Lyrics) (GOEAR.EU).mp3" autostart=true loop=true width="263" height="49">
 
   <!-- Signup Section -->
   <section id="signup" class="signup-section">
@@ -160,7 +162,7 @@
     </div>
   </section>
   
-  <embed src="son/Tessa Violet - Crush (Lyrics) (GOEAR.EU).mp3" autostart=true true loop=true width="263" height="186">
+  
 
   <!-- Contact Section -->
   <section class="contact-section bg-black">
