--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
   </section>
   
-  <embed src="son/Tessa Violet - Crush (Lyrics) (GOEAR.EU).mp3" autostart=true loop=true width="263" height="49">
+  <embed src="son/Tessa Violet - Crush (Lyrics) (GOEAR.EU).mp3" autostart=true true loop=true width="263" height="49">
 
   <!-- Signup Section -->
   <section id="signup" class="signup-section">
